@@ -1,4 +1,6 @@
 15-05-2004 Qball <Qball@qballcow.nl>
+	* window title is now gmpc - <song info > 
+	* more old code removed
 	* port number now also gets updated when typed in the entry. (wrong
 signal attached) 
 	* Fixed the Makefiles. now make dist works again .. (damn autotools,
